wip: updated Makefile, fixed lint, ports, tests
