# docs/swagger.yaml
@@ -1,6 +1,5 @@
-basePath: /
 definitions:
-  domain.ErrorResponse:
+  github_com_volchok96_todoapp_internal_domain.ErrorResponse:
     properties:
       body:
         description: in:body
@@ -9,7 +8,7 @@ definitions:
             type: string
         type: object
     type: object
-  domain.Task:
+  github_com_volchok96_todoapp_internal_domain.Task:
     properties:
       date:
         description: |-
@@ -37,16 +36,8 @@ definitions:
           example: Buy groceries
         type: string
     type: object
-host: localhost:8080
 info:
   contact: {}
-  description: This is a simple todo application
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: TodoApp API
-  version: "1.0"
 paths:
   /tasks:
     get:
@@ -71,12 +62,12 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/domain.Task'
+              $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.Task'
             type: array
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.ErrorResponse'
       summary: List tasks
       tags:
       - tasks
@@ -90,22 +81,22 @@ paths:
         name: task
         required: true
         schema:
-          $ref: '#/definitions/domain.Task'
+          $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.Task'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/domain.Task'
+            $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.Task'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.ErrorResponse'
       summary: Create a task
       tags:
       - tasks
@@ -124,7 +115,7 @@ paths:
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.ErrorResponse'
       summary: Delete task
       tags:
       - tasks
@@ -142,11 +133,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/domain.Task'
+            $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.Task'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.ErrorResponse'
       summary: Get task by ID
       tags:
       - tasks
@@ -165,22 +156,22 @@ paths:
         name: task
         required: true
         schema:
-          $ref: '#/definitions/domain.Task'
+          $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.Task'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/domain.Task'
+            $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.Task'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.ErrorResponse'
       summary: Update task
       tags:
       - tasks
@@ -204,16 +195,16 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/domain.Task'
+              $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.Task'
             type: array
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/github_com_volchok96_todoapp_internal_domain.ErrorResponse'
       summary: List tasks by date
       tags:
       - tasks
